--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   </div>
   <script src="js/sight.js"></script>
   <script>
+    new Sight('.svg', 400, 400);
+    svg.draw('circle', {cx: 50, cy:50, r: 50});
   </script>
 </body>
 </html>
